# MobaChampionAnalysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
notebooks/: test_lol_historic.ipynb  test_lol_viz.ipynb
src/mca/: __init__.py  __main__.py  catalog.py  hooks.py  pipeline_registry.py  settings.py
src/mca/custom_data/: versus_scenarios.py  year_partition.py  year_partition_2.py  year_partition_3.py
src/mca/pipelines/data_processing/: nodes.py  pipeline.py
src/mca/pipelines/data_science/: nodes.py  pipeline.py
src/mca/pipelines/explanatory_variables/: nodes.py  pipeline.py
src/mca/pipelines/reporting/: pipeline.py
src/mca/pipelines/visualization/: pipeline.py
src/mca/ports/: HeroInfo.py
src/mca/utils/: operations.py
